--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
   <!DOCTYPE html>
   <html>
     <head>
-      <h2> Hello World </h2>
+      <img src="WebBanner2023.png" alt="banner" width="900" height"300">
     </head>   
   </html>
