--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,6 @@
       <hr>
       <h2 style=”font-family:calibri:”> <b> Conference paper: Bridge Deck Repairs </b> </h2>
       <hr>
-      
+      <!-- continue from 7 -->
     </head>   
   </html>
