--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,8 @@
   <html>
     <head>
       <img src="WebBanner2023.png" alt="banner" width="900" height"300">
-       <h1> <b> ENG0018 Computer Laboratory 2023/24  </b> </h1>   
+       <h1> <b> ENG0018 Computer Laboratory 2023/24  </b> </h1> 
+      <h1> not bold <b> Bold </b> <h1>
          <h2>Student URN: 6839172</h2>
       <hr>
       <h2 style=”font-family:calibri:”> <b> Conference paper: Bridge Deck Repairs </b> </h2>
