--- a/index.htm
+++ b/index.htm
@@ -19,8 +19,7 @@
 <html>
 
     <head>
-
-        <img src="assets/WebBanner2023.png" alt="Banner" width="1200" height="300">
+        <img src="WebBanner2023.png" alt="banner" width="900" height"300">
 
     </head>
 
