--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,7 @@
 <html>
 
     <head>
-        <img src="WebBanner2023.png" alt="banner" width="900" height"300">
+        <img src="./WebBanner2023.png" alt="banner" width="900" height"300">
 
     </head>
 
