--- a/index.html
+++ b/index.html
@@ -1,21 +1,4 @@
 <!DOCTYPE html>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<link rel="stylesheet" href="assets/styles.css">
-
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-<script type="text/javascript" src="https://gstatic.com/charts/loader.js"></script>
-
-<script type="text/javascript">
-
-    google.charts.load('current', {'packages':['corechart']});
-
-    google.charts.setOnLoadCallback(drawChart);
-
-</script>
-
 <html>
 
     <head>
@@ -25,80 +8,14 @@
 
     <hr>
 
-    <h1 class="main"><b>ENG0018: Computer Laboratory 2023-24</b></h1>
+    <h1><b>ENG0018: Computer Laboratory 2023-24</b></h1>
 
     <h2>URN 6839172</h2>
 
     <hr>
 
-    <h2 style="font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><b>Conference Paper: Bridge Deck Repairs</b></h2>
+    <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
 
     <hr>
-
-    <p class="ex1">
-
-        This paper presents a novel adaptive learning strategy. The most accurate classification model from a heterogeneous classifier pool is
-
-        selected at each learning epoch. Our goal is to achieve greater incrementla imrovement in accuracy, compared to using a single type of
-
-        classification model throughout the process. The strategry is evaluated on benchmark data sets.
-
-    </p>
-
- 
-
-    <table>
-
-        <tr>
-
-            <th>Sections</th>
-
-            <th>Page number</th>
-
-            <th>Edition</th>
-
-        </tr>
-
-        <tr>
-
-            <td>Introduction</td>
-
-            <td>20</td>
-
-            <td>3rd Edition</td>
-
-        </tr>
-
-        <tr>
-
-            <td>Conclusion</td>
-
-            <td>23</td>
-
-            <td>3rd Edition</td>
-
-        </tr>
-
-        <tr>
-
-            <td>Table of Figures</td>
-
-            <td>26</td>
-
-            <td>8th Edition</td>
-
-        </tr>
-
-        <tr>
-
-            <td>Abstract</td>
-
-            <td>29</td>
-
-            <td>2nd Edition</td>
-
-        </tr>
-
-    </table>
-
+    
 </html>
