--- a/index.html
+++ b/index.html
@@ -56,20 +56,48 @@ to improve the classification model. Various strategies have been proposed inclu
 Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty 
 sampling (Lewis and Gale, 1994)
     </pre>
+    <h3 id="introduction">introduction</h3>  
+    <pre>
+version space reduction (margin sampling) (Tong and Koller, 
+2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
+presented for labeling, to a machine (database) or human oracle that has knowledge of the class 
+labels. After adding the newly labeled instances to the current training set, a revised model is 
+subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of 
+learning at each epoch. The process is continued until some stopping criterion has been met, such as 
+reaching a stage where information from the selected instances is contrary to the model, causing the 
+classifier confidence to drop, as in Vlachos (2008).”
+    </pre>
+    <h3 id="discussion">discussion</h3>  
+    <pre>
+ahhhhhhhhhhhh
+        dajoadfsafsg
+        hi
+    </pre>
+    <h3 id="refrences">ref</h3>  
+    <pre>
+        a.
+        b.
+        c.
+    </pre>
     </p>
-    <p>
-text abstraction
-“Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an 
-intelligent machine through the interaction of an oracle with the machine system, over a sequence of 
-learning epochs.
-        
-A distinctive component in an active system is the querying strategy, used to sample 
-candidate training instances from a pool and evaluate them for informativeness, i.e., their potential 
-to improve the classification model. Various strategies have been proposed including; Query by 
-Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty 
-sampling (Lewis and Gale, 1994)      
-    </p>
-    <hr>
-    
-    <!continue from h2 15.>
+
+    <!table of contents>
+    <table>
+        <tr>
+            <th><h3>Table of contents</h3> </th>
+        </tr>
+        <tr>
+            <td> <a href="#abstract">ref to abstract </td>
+        </tr>
+        <tr>
+            <td> <a href="#introduction">ref to introduction </td>
+        </tr>
+        <tr>
+            <td> <a href="#discussion">ref to discussion </td>
+        </tr>
+        <tr>
+            <td> <a href="#refrences">ref to refrences </td>
+        </tr>
+    </table>
+    <!continue from 21>
 </html>
