ref links to work.html

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ ahhhhhhhhhhhh
         hi
     </pre>
     <h3 id="refrences">ref</h3>  
-    <pre>
-        <a href="https://en.wikipedia.org/wiki/Origami">a. Origami</a>
+    <a href="https://en.wikipedia.org/wiki/Origami"> <pre>a. Origami </pre>pre></a>
+     <pre>
         b.
         c.
     </pre>
