--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1><b>ENG0018: Computer Laboratory 2023-24</b></h1>
     <p>URN 6839172</p>
     <hr>
-    <h2><b>Conference Paper: Bridge Deck Repairs</b></h2>
+    <h2><b>Conference Paper: Uses of origami for space development</b></h2>
     <hr>
     <head>
         <!style for tables>
@@ -46,28 +46,26 @@
     <p class="ex">
     <pre>
 text abstraction
-“Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an 
-intelligent machine through the interaction of an oracle with the machine system, over a sequence of 
-learning epochs.
-        
-A distinctive component in an active system is the querying strategy, used to sample 
-candidate training instances from a pool and evaluate them for informativeness, i.e., their potential 
-to improve the classification model. Various strategies have been proposed including; Query by 
-Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty 
-sampling (Lewis and Gale, 1994)
+Origami has always interested me: how complex 3d structures can be created by simple folds. 
+I think space structures are some of the most complex structures our society creates, 
+so I set out to research if Origami is being used in space development. I first had to understand
+what challenges might stop origami from being used. I found that it is difficult to model origami
+folds currently so there is limited use although there is a lot of interest in using origami for 
+solar sails. Nasa is doing further research on modelling origami but did use some simple folding 
+techniques on the James web telescope and Japan has had success using origami folds in their solar 
+sails, and we will look at these in greater depth.
     </pre>
     <h3 id="introduction">introduction</h3>  
     <pre>
-version space reduction (margin sampling) (Tong and Koller, 
-2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
-presented for labeling, to a machine (database) or human oracle that has knowledge of the class 
-labels. After adding the newly labeled instances to the current training set, a revised model is 
-subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of 
-learning at each epoch. The process is continued until some stopping criterion has been met, such as 
-reaching a stage where information from the selected instances is contrary to the model, causing the 
-classifier confidence to drop, as in Vlachos (2008).”
+Origami is the Japanese art of folding paper; it is primarily used to create decorative pieces. Many people have seen, and some made, an origami crane. In approximately 20 folds you can turn a flat piece of paper into a complex crane. If you have attempted to make a crane, then you may have noticed that despite having strict instructions there is a degree of flexibility to each fold: no folds need to be perfect to obtain a recognisable crane. Paper and human creation allows for some error in each fold however if you where to use origami in space there needs to be no errors. To make sure that is possible we need to model the folds.
+</pre>
+    <h3 id="modelling">modelling</h3>  
+    <pre>
+ahhhhhhhhhhhh
+        dajoadfsafsg
+        hi
     </pre>
-    <h3 id="discussion">discussion</h3>  
+    <h3 id="Ways origami has already been used in space">Ways origami has already been used in space</h3>  
     <pre>
 ahhhhhhhhhhhh
         dajoadfsafsg
@@ -93,7 +91,10 @@ ahhhhhhhhhhhh
             <td> <a href="#introduction">ref to introduction </td>
         </tr>
         <tr>
-            <td> <a href="#discussion">ref to discussion </td>
+            <td> <a href="#modelling">ref to modelling </td>
+        </tr>
+        <tr>
+            <td> <a href="#Ways origami has already been used in space">ref to Ways origami has already been used in space </td>
         </tr>
         <tr>
             <td> <a href="#refrences">ref to refrences </td>
