--- a/index.html
+++ b/index.html
@@ -119,16 +119,80 @@ been some success such as IKAROS, I believe Origami has already proven its usefu
 folds will inspire more structures such as the Miura fold inspiring IKAROS or if there will be a broader use of Origami to the point 
 where it will no longer be credited to Origami it will just be the way of folding for space use.
     </pre>
-    <h3 id="refrences">ref</h3>  
+    <h3 id="refrences">refrences</h3>  
+	    <hr>
 <pre>
-	a. Origami 
+Schenk, M., Viquerat, A., Seffen, K. and Guest, S.  (2014) ‘Review of Inflatable Booms for Deployable Space Structures: Packing and 
+Rigidization.’, Journal of Spacecraft and Rockets, 51(3), pp. 762–778. Available at: 
 </pre>
-	    <a href="https://en.wikipedia.org/wiki/Origami">link</a>
-    
-     <pre>
-        b.
-        c.
-    </pre>
+<a href="surrey.primo.exlibrisgroup.com/discovery/delivery?vid=44SUR_INST:ResearchRepository&repId=12138977060002346#">surrey.primo.exlibrisgroup.com/discovery/delivery?vid=44SUR_INST:ResearchRepository&repId=12138977060002346# (Accessed: 30 Nov 2023).</a>
+<hr>
+	    <pre>
+Zheng, Y., Wu, H., Li, S., Zhang, J., Yang, C. and Luo, Y. (2023) ‘Analysis of dynamic process of thick-panel origami structures 
+based on finite particle method.’ Engineering structures, 295, Available at: 
+</pre>
+<a href="https://doi.org/10.1016/j.engstruct.2023.116761">https://doi.org/10.1016/j.engstruct.2023.116761</a>
+
+	    <hr>
+	    <pre>
+Chen, Y., Peng, R., and You, Z. (2015). ‘Origami of thick panels.’ Science, 349(6246), pp. 396–400. Available at: 
+	    </pre>
+<a href="https://www-jstor-org.surrey.idm.oclc.org/stable/24748528?sid=primo&seq=5">https://www-jstor-org.surrey.idm.oclc.org/stable/24748528?sid=primo&seq=5 (Accessed: 30 Nov 2023).</a>
+	    <hr>
+	    <pre>
+Jingyi, Y., Yunlan, Z., Manolis, C. and Zhong, Y. (2022) ‘Folding and deploying identical thick panels with spring-loaded hinges’ 
+Extreme Mechanics Letters, 52, Available at: 
+	    </pre>
+<a href="https://doi.org/10.1016/j.eml.2022.101637">https://doi.org/10.1016/j.eml.2022.101637</a>
+	    <hr>
+	    <pre>
+NASA (2022) NASA’s Webb Telescope Reaches Major Milestone as Mirror Unfolds. Available at: 
+	    </pre>
+<a href="https://www.nasa.gov/news-release/nasas-webb-telescope-reaches-major-milestone-as-mirror-unfolds/">https://www.nasa.gov/news-release/nasas-webb-telescope-reaches-major-milestone-as-mirror-unfolds/ (Accessed: 30 Nov 2023).</a>
+
+	    <hr>
+	    <pre>
+Sasaki, T. (2021) Origami Techniques Applied to Space Development, Available at:
+	    </pre>
+<a href="https://www.gov-online.go.jp/eng/publicity/book/hlj/html/202112/202112_05_en.html.">https://www.gov-online.go.jp/eng/publicity/book/hlj/html/202112/202112_05_en.html. (Accessed: 30 Nov 2023).</a>
+
+	    <hr>
+	    <pre>
+WONDER DOME (no date) Origami and how we use it to explore space. Available at: 
+	    </pre>
+<a href="https://wonderdome.co.uk/space-origami/#:~:text=The%20most%20famous%20example%20of,it%20in%20a%20single%20movement."> https://wonderdome.co.uk/space-origami/#:~:text=The%20most%20famous%20example%20of,it%20in%20a%20single%20movement. (Accessed: 30 Nov 2023).</a>
+	    <hr>
+	    <pre>
+Bain, I. (no date) The Miura-Ori map, Available at:
+	    </pre>
+<a href="https://www.britishorigami.org/cp-resource/the-miura-ori-map/.">https://www.britishorigami.org/cp-resource/the-miura-ori-map/. (Accessed: 30 Nov 2023). </a>
+
+	    <hr>
+	    <pre>
+NASA (2023) Solar Sail Demonstrator, Available at: 
+	    </pre>
+<a href="https://www.nasa.gov/tdm/solar-sail-demonstrator-sunjammer/.">https://www.nasa.gov/tdm/solar-sail-demonstrator-sunjammer/. (Accessed: 30 Nov 2023). </a>
+
+	    <hr>
+	    <pre>
+[9] Jaxa (no date) IKAROS Small Scale Solar Powered Sail Demonstration Satellite, Available at: 
+	    </pre>
+<a href="https://www.isas.jaxa.jp/en/missions/spacecraft/current/ikaros.html."> https://www.isas.jaxa.jp/en/missions/spacecraft/current/ikaros.html. (Accessed: 30 Nov 2023).</a>
+
+	    <hr>
+	    <pre>
+[10] Jaxa (no date) IKAROS Mission Overview, Available at: 
+
+	    </pre>
+<a href="https://global.jaxa.jp/countdown/f17/overview/ikaros_e.html."> https://global.jaxa.jp/countdown/f17/overview/ikaros_e.html. (Accessed: 30 Nov 2023).</a>
+
+	    <hr>
+	    <pre>
+Fulton, J. (2023) Dynamics Analysis of Origami-Folded Deployable Space Structures with Elastic Hinges, Available at: 
+	    </pre>
+<a href="https://www.nasa.gov/directorates/stmd/space-tech-research-grants/dynamics-analysis-of-origami-folded-deployable-space-structures-with-elastic-hinges/.">https://www.nasa.gov/directorates/stmd/space-tech-research-grants/dynamics-analysis-of-origami-folded-deployable-space-structures-with-elastic-hinges/. (Accessed: 30 Nov 2023). </a>
+
+	    <hr>
     </p>
 
     <!table of contents>
