--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ space there needs to be no errors. To make sure that is possible we need to mode
     <pre>
 “An important concept in applying origami to engineering, is the notion of ‘rigid’ origami. This assumes that the material does not 
 bend or stretch between the fold lines and can be modelled effectively as rigid panels connected by frictionless hinges. A more relaxed
-definition is ‘isometric’ Origami, where the material can bend but not stretch” (Schenk,2014)
-
+definition is ‘isometric’ Origami, where the material can bend but not stretch” 
+	    <td> <a href="#refrences">(Schenk,2014)</td>
 one model that has had reasonable success was one mainly based on rigid origami although they also added systems to measure internal stress
 		due to flexibility. (Zheng,2023)
         
@@ -119,9 +119,11 @@ been some success such as IKAROS, I believe Origami has already proven its usefu
 folds will inspire more structures such as the Miura fold inspiring IKAROS or if there will be a broader use of Origami to the point 
 where it will no longer be credited to Origami it will just be the way of folding for space use.
     </pre>
+	    
     <h3 id="refrences">refrences</h3>  
 	    <hr>
 <pre>
+<h3 id="(Schenk,2014)">(Schenk,2014)</h3> 
 Schenk, M., Viquerat, A., Seffen, K. and Guest, S.  (2014) ‘Review of Inflatable Booms for Deployable Space Structures: Packing and 
 Rigidization.’, Journal of Spacecraft and Rockets, 51(3), pp. 762–778. Available at: 
 </pre>
