--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@ space there needs to be no errors. To make sure that is possible we need to mode
 “An important concept in applying origami to engineering, is the notion of ‘rigid’ origami. This assumes that the material does not 
 bend or stretch between the fold lines and can be modelled effectively as rigid panels connected by frictionless hinges. A more relaxed
 definition is ‘isometric’ Origami, where the material can bend but not stretch” 
-	    <td> <a href="#refrences">(Schenk,2014)</td>
+<td> <a href="#abstract">ref to abstract </td>
+<td> <a href="#refrences">ref to refrences </td>
+    </pre>	
+<td> <a href="#abstract">ref to abstract ouu </td>
+<td> <a href="#refrences">ref to refrences out </td>
+ <pre>
+	    
 one model that has had reasonable success was one mainly based on rigid origami although they also added systems to measure internal stress
-		due to flexibility. (Zheng,2023)
+due to flexibility. (Zheng,2023)
         
 To model two panels as seen in figure 1 (a) first they split each panel into 4 hexagonal elements, each made up of 8 particles. To prevent
 the panels passing through each other using surface-to-surface contact, elements were set up between particles in hexagonal elements as
