--- a/index.html
+++ b/index.html
@@ -65,12 +65,8 @@ space there needs to be no errors. To make sure that is possible we need to mode
 “An important concept in applying origami to engineering, is the notion of ‘rigid’ origami. This assumes that the material does not 
 bend or stretch between the fold lines and can be modelled effectively as rigid panels connected by frictionless hinges. A more relaxed
 definition is ‘isometric’ Origami, where the material can bend but not stretch” 
-<td> <a href="#abstract">ref to abstract </td>
-<td> <a href="#refrences">ref to refrences </td>
-    </pre>	
-<td> <a href="#abstract">ref to abstract ouu </td>
-<td> <a href="#refrences">ref to refrences out </td>
- <pre>
+<td> <a href="#(Schenk,2014)">(Schenk,2014) </td>
+
 	    
 one model that has had reasonable success was one mainly based on rigid origami although they also added systems to measure internal stress
 due to flexibility. (Zheng,2023)
@@ -127,9 +123,9 @@ where it will no longer be credited to Origami it will just be the way of foldin
     </pre>
 	    
     <h3 id="refrences">refrences</h3>  
-	    <hr>
+
 <pre>
-<h3 id="(Schenk,2014)">(Schenk,2014)</h3> 
+<h3 id="(Schenk,2014)"></h3> 
 Schenk, M., Viquerat, A., Seffen, K. and Guest, S.  (2014) ‘Review of Inflatable Booms for Deployable Space Structures: Packing and 
 Rigidization.’, Journal of Spacecraft and Rockets, 51(3), pp. 762–778. Available at: 
 </pre>
