--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ space there needs to be no errors. To make sure that is possible we need to mode
 “An important concept in applying origami to engineering, is the notion of ‘rigid’ origami. This assumes that the material does not 
 bend or stretch between the fold lines and can be modelled effectively as rigid panels connected by frictionless hinges. A more relaxed
 definition is ‘isometric’ Origami, where the material can bend but not stretch” 
-<td> <a href="#(Schenk,2014)"> (Schenk,2014) </td>
+<td> <a href="#(Schenk,2014)"> (Schenk,2014) </a></td>
 
 	    
 one model that has had reasonable success was one mainly based on rigid origami although they also added systems to measure internal stress
@@ -205,22 +205,22 @@ Fulton, J. (2023) Dynamics Analysis of Origami-Folded Deployable Space Structure
             <th><h3>Table of contents</h3> </th>
         </tr>
         <tr>
-            <td> <a href="#abstract">ref to abstract </td>
+            <td> <a href="#abstract">ref to abstract </a></td>
         </tr>
         <tr>
-            <td> <a href="#introduction">ref to introduction </td>
+            <td> <a href="#introduction">ref to introduction </a></td>
         </tr>
         <tr>
-            <td> <a href="#modelling">ref to modelling </td>
+            <td> <a href="#modelling">ref to modelling </a></td>
         </tr>
         <tr>
             <td> <a href="#Ways origami has already been used in space">ref to Ways origami has already been used in space </td>
         </tr>
         <tr>
-            <td> <a href="#Conclusion">ref to Conclusion </td>
+            <td> <a href="#Conclusion">ref to Conclusion </a></td>
         </tr>
         <tr>
-            <td> <a href="#refrences">ref to refrences </td>
+            <td> <a href="#refrences">ref to refrences </a></td>
         </tr>
     </table>
     <hr>
