--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ space there needs to be no errors. To make sure that is possible we need to mode
 “An important concept in applying origami to engineering, is the notion of ‘rigid’ origami. This assumes that the material does not 
 bend or stretch between the fold lines and can be modelled effectively as rigid panels connected by frictionless hinges. A more relaxed
 definition is ‘isometric’ Origami, where the material can bend but not stretch” 
-<td> <a href="#(Schenk,2014)"> (Schenk,2014) </a></td>
+<a href="#(Schenk,2014)">(Schenk,2014)</a>
 
 	    
 one model that has had reasonable success was one mainly based on rigid origami although they also added systems to measure internal stress
