--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@ space there needs to be no errors. To make sure that is possible we need to mode
     <pre>
 “An important concept in applying origami to engineering, is the notion of ‘rigid’ origami. This assumes that the material does not 
 bend or stretch between the fold lines and can be modelled effectively as rigid panels connected by frictionless hinges. A more relaxed
-definition is ‘isometric’ Origami, where the material can bend but not stretch” 
-<a href="#(Schenk,2014)">(Schenk,2014)</a>
+definition is ‘isometric’ Origami, where the material can bend but not stretch” <a href="#(Schenk,2014)">(Schenk,2014)</a>
 
 	    
 one model that has had reasonable success was one mainly based on rigid origami although they also added systems to measure internal stress
-due to flexibility. (Zheng,2023)
+due to flexibility. <a href="#(Zheng,2023))">(Zheng,2023)</a>
         
 To model two panels as seen in figure 1 (a) first they split each panel into 4 hexagonal elements, each made up of 8 particles. To prevent
 the panels passing through each other using surface-to-surface contact, elements were set up between particles in hexagonal elements as
@@ -78,10 +77,10 @@ was run. How the panels move is controlled by the particles moving, and how the 
 translational degrees of freedom (DOFs)i.e., they can move in an x, y and z plane. At the hinge between panels the particles are connected
 so can be coupled and therefore the panels are now modelled as being connected. In a truly ridged system only bar-to-bar elements would be
 required to connect particles but by establishing a bar-to-bar spring element the model can now obtain data about strain and energy of real
-panels during deployment.  (Chen,2015)
+panels during deployment. <a href="#(Chen,2015)">(Chen,2015)</a> 
 
 A paper to study this showed the deployment predicted from this model had small motion differences from the modelled movement as seen in
-figure 2. however, they estimated this deviation might be due to the aerodynamic drag and the non-constant spring stiffness. (Jingyi,2022)
+figure 2. however, they estimated this deviation might be due to the aerodynamic drag and the non-constant spring stiffness. <a href="#(Jingyi,2022)">(Jingyi,2022)</a> 
 this shows we are getting much closer to modelling origami and the more accurate the model the more we can apply these uses in space.
 
 
@@ -92,31 +91,31 @@ this shows we are getting much closer to modelling origami and the more accurate
 The James Webb telescope successfully used simple origami techniques to fold a large lens so it would fit in a rocket. Although the
 fold may seem relatively simple in terms of Origami “This was the first time a NASA-led mission had ever attempted to complete a complex
 sequence to unfold an observatory in space “– a remarkable feat for our team, NASA, and the world.” Gregory L. Robinson, Webb program
-director at NASA Headquarters. (Nasa,2022)
+director at NASA Headquarters. <a href="#(Nasa,2022)">(Nasa,2022)</a>
 
 
 One area that is seeing a lot of development is the idea of using Origami for solar sails. True solar sailing is where a vessel could
 be powered by the pressure from photons. however most solar sails also use the large sail as a solar panel as well to generate power.
 [6] Unlike the James Webb telescope a solar sail can be flexible but it still needs to deploy in a consistent way. A multiple step
 folding pattern may be easier to fold on earth by human but in space a multistep process is much harder to perform. This is where the
-usefulness of origami comes in, there are many patterns designed to unfold a panel in one motion. (Wonder Dome, no date)
-
+usefulness of origami comes in, there are many patterns designed to unfold a panel in one motion.<a href="#(Wonder Dome, no date)">(Wonder Dome, no date)</a> 
+insert figure here <a href="#(Bain,2022)">(Bain,2022)</a>
 “One of the best examples of this … is the Miura-ori or Miura fold, devised in 1970 by Dr. Miura Koryo. The Miura fold is a folding
 technique that allows even a large sheet of paper to be quickly opened out and stowed again by simply pushing and pulling on its 
-diagonals.” See figure 3. (Sasaki ,2021)
+diagonals.” See figure 3. <a href="#(Sasaki ,2021)">(Sasaki ,2021)</a>
 
-NASA had an unsuccessful attempt at demonstrating the use of solar sails (Nasa,2023) however Japan’s Aerospace Exploration Agency
-(JAXA) launched IKAROS on 20 May 2010. (Jaxa, no date) [9] It was successful in proving the viability of navigationusing a
+NASA had an unsuccessful attempt at demonstrating the use of solar sails <a href="#(Nasa,2023)">(Nasa,2023)</a> however Japan’s Aerospace Exploration Agency
+(JAXA) launched IKAROS on 20 May 2010. <a href="#(Jaxa, no date - a)">(Jaxa, no date - a)</a> It was successful in proving the viability of navigationusing a
 combination of solar sails and solar power. The sail of the IKAROS is approximately 20 meters in diagonal length and is as thin as
 0.0075 mm. It deployed in two stages:  the first stage was controlled by an inboard deployment mechanism; the secondbstage was the
-spinning of IKAROS to dynamically deploy the sail. (Jaxa, no date) [10] see figure 4. The dynamic movement was inspired by Origami
+spinning of IKAROS to dynamically deploy the sail. <a href="#(Jaxa, no date - b)">(Jaxa, no date - b)</a> see figure 4. The dynamic movement was inspired by Origami
 folds and by continuing to have IKAROS rotate in space that would provide a constant force so the sail wouldn’t collapse or require a
 support boom.
 
 </pre>
     <h3 id="Conclusion">Conclusion</h3>  
     <pre>
-As many places are researching how to model origami folds (NASA has said they are working on it (Fulton,2023)) and there has already
+As many places are researching how to model origami folds (NASA has said they are working on it <a href="#(Fulton,2023)">(Fulton,2023)</a>) and there has already
 been some success such as IKAROS, I believe Origami has already proven its usefulness for space development. I wonder whether specific
 folds will inspire more structures such as the Miura fold inspiring IKAROS or if there will be a broader use of Origami to the point 
 where it will no longer be credited to Origami it will just be the way of folding for space use.
@@ -130,67 +129,70 @@ Schenk, M., Viquerat, A., Seffen, K. and Guest, S.  (2014) ‘Review of Inflatab
 Rigidization.’, Journal of Spacecraft and Rockets, 51(3), pp. 762–778. Available at: 
 </pre>
 <a href="https://surrey.primo.exlibrisgroup.com/discovery/delivery?vid=44SUR_INST:ResearchRepository&repId=12138977060002346">surrey.primo.exlibrisgroup.com/discovery/delivery?vid=44SUR_INST:ResearchRepository&repId=12138977060002346# (Accessed: 30 Nov 2023).</a>
-<hr>
+
+<h3 id="(Zheng,(2023)"> </h3> 
 	    <pre>
 Zheng, Y., Wu, H., Li, S., Zhang, J., Yang, C. and Luo, Y. (2023) ‘Analysis of dynamic process of thick-panel origami structures 
 based on finite particle method.’ Engineering structures, 295, Available at: 
 </pre>
 <a href="https://doi.org/10.1016/j.engstruct.2023.116761">https://doi.org/10.1016/j.engstruct.2023.116761</a>
 
-	    <hr>
+<h3 id="(Chen,2015)"> </h3> 
 	    <pre>
 Chen, Y., Peng, R., and You, Z. (2015). ‘Origami of thick panels.’ Science, 349(6246), pp. 396–400. Available at: 
 	    </pre>
 <a href="https://www-jstor-org.surrey.idm.oclc.org/stable/24748528?sid=primo&seq=5">https://www-jstor-org.surrey.idm.oclc.org/stable/24748528?sid=primo&seq=5 (Accessed: 30 Nov 2023).</a>
-	    <hr>
+
+<h3 id="(Jingyi,2022)"> </h3> 
 	    <pre>
 Jingyi, Y., Yunlan, Z., Manolis, C. and Zhong, Y. (2022) ‘Folding and deploying identical thick panels with spring-loaded hinges’ 
 Extreme Mechanics Letters, 52, Available at: 
 	    </pre>
 <a href="https://doi.org/10.1016/j.eml.2022.101637">https://doi.org/10.1016/j.eml.2022.101637</a>
-	    <hr>
+
+<h3 id="(Nasa,2022)"> </h3> 
 	    <pre>
 NASA (2022) NASA’s Webb Telescope Reaches Major Milestone as Mirror Unfolds. Available at: 
 	    </pre>
 <a href="https://www.nasa.gov/news-release/nasas-webb-telescope-reaches-major-milestone-as-mirror-unfolds/">https://www.nasa.gov/news-release/nasas-webb-telescope-reaches-major-milestone-as-mirror-unfolds/ (Accessed: 30 Nov 2023).</a>
 
-	    <hr>
+<h3 id="(Sasaki ,2021)"> </h3> 
 	    <pre>
 Sasaki, T. (2021) Origami Techniques Applied to Space Development, Available at:
 	    </pre>
 <a href="https://www.gov-online.go.jp/eng/publicity/book/hlj/html/202112/202112_05_en.html">https://www.gov-online.go.jp/eng/publicity/book/hlj/html/202112/202112_05_en.html. (Accessed: 30 Nov 2023).</a>
 
-	    <hr>
+<h3 id="(Wonder Dome, no date)"> </h3> 
 	    <pre>
 WONDER DOME (no date) Origami and how we use it to explore space. Available at: 
 	    </pre>
 <a href="https://wonderdome.co.uk/space-origami/#:~:text=The%20most%20famous%20example%20of,it%20in%20a%20single%20movement"> https://wonderdome.co.uk/space-origami/#:~:text=The%20most%20famous%20example%20of,it%20in%20a%20single%20movement. (Accessed: 30 Nov 2023).</a>
-	    <hr>
+
+<h3 id="(Bain,2022)"> </h3> 
 	    <pre>
 Bain, I. (no date) The Miura-Ori map, Available at:
 	    </pre>
 <a href="https://www.britishorigami.org/cp-resource/the-miura-ori-map/">https://www.britishorigami.org/cp-resource/the-miura-ori-map/. (Accessed: 30 Nov 2023). </a>
 
-	    <hr>
+<h3 id="(Nasa,2023)"> </h3> 
 	    <pre>
 NASA (2023) Solar Sail Demonstrator, Available at: 
 	    </pre>
 <a href="https://www.nasa.gov/tdm/solar-sail-demonstrator-sunjammer/">https://www.nasa.gov/tdm/solar-sail-demonstrator-sunjammer/. (Accessed: 30 Nov 2023). </a>
 
-	    <hr>
+<h3 id="(Jaxa, no date - a)"> </h3> 
 	    <pre>
-[9] Jaxa (no date) IKAROS Small Scale Solar Powered Sail Demonstration Satellite, Available at: 
+[9] Jaxa (no date - a) IKAROS Small Scale Solar Powered Sail Demonstration Satellite, Available at: 
 	    </pre>
 <a href="https://www.isas.jaxa.jp/en/missions/spacecraft/current/ikaros.html"> https://www.isas.jaxa.jp/en/missions/spacecraft/current/ikaros.html. (Accessed: 30 Nov 2023).</a>
 
-	    <hr>
+<h3 id="(Jaxa, no date - b)"> </h3> 
 	    <pre>
-[10] Jaxa (no date) IKAROS Mission Overview, Available at: 
-
+[10] Jaxa (no date - b) IKAROS Mission Overview, Available at: 
 	    </pre>
 <a href="https://global.jaxa.jp/countdown/f17/overview/ikaros_e.html"> https://global.jaxa.jp/countdown/f17/overview/ikaros_e.html. (Accessed: 30 Nov 2023).</a>
 
-	    <hr>
+<h3 id="(Fulton,2023)"> </h3> 
 	    <pre>
 Fulton, J. (2023) Dynamics Analysis of Origami-Folded Deployable Space Structures with Elastic Hinges, Available at: 
 	    </pre>
