--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@ so can be coupled and therefore the panels are now modelled as being connected. 
 required to connect particles but by establishing a bar-to-bar spring element the model can now obtain data about strain and energy of real
 panels during deployment. <a href="#(Chen,2015)">(Chen,2015)</a> 
 
+	            <img src="model.jpg" alt="banner" width="900" height"300">
+			figure.1 visualisations of two panels and how to model them 
+
 A paper to study this showed the deployment predicted from this model had small motion differences from the modelled movement as seen in
 figure 2. however, they estimated this deviation might be due to the aerodynamic drag and the non-constant spring stiffness. <a href="#(Jingyi,2022)">(Jingyi,2022)</a> 
 this shows we are getting much closer to modelling origami and the more accurate the model the more we can apply these uses in space.
