--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@ so can be coupled and therefore the panels are now modelled as being connected. 
 required to connect particles but by establishing a bar-to-bar spring element the model can now obtain data about strain and energy of real
 panels during deployment. <a href="#(Chen,2015)">(Chen,2015)</a> 
 
-	            <img src="model.jpg" alt="banner" width="900" height"300">
+	            <img src="model.jpg" alt="figure.1 visualisations of two panels and how to model them" width="900" height"300">
 			figure.1 visualisations of two panels and how to model them 
 
 A paper to study this showed the deployment predicted from this model had small motion differences from the modelled movement as seen in
 figure 2. however, they estimated this deviation might be due to the aerodynamic drag and the non-constant spring stiffness. <a href="#(Jingyi,2022)">(Jingyi,2022)</a> 
 this shows we are getting much closer to modelling origami and the more accurate the model the more we can apply these uses in space.
-
+	            <img src="deployment figure.jpg" alt="a computer generated simulation then a real life test" width="900" height"300">
+			figure 2. row 1 shows the predicted movement of the panels and row two shows the actual deployment 
 
 
     </pre>
@@ -106,7 +107,9 @@ insert figure here <a href="#(Bain,2022)">(Bain,2022)</a>
 “One of the best examples of this … is the Miura-ori or Miura fold, devised in 1970 by Dr. Miura Koryo. The Miura fold is a folding
 technique that allows even a large sheet of paper to be quickly opened out and stowed again by simply pushing and pulling on its 
 diagonals.” See figure 3. <a href="#(Sasaki ,2021)">(Sasaki ,2021)</a>
-
+	            <img src="Miura fold.jpg" alt="the folds of a map" width="900" height"300">
+			fig 3 shows the unfolding of a Miura fold source (Bain,2022) 
+	    
 NASA had an unsuccessful attempt at demonstrating the use of solar sails <a href="#(Nasa,2023)">(Nasa,2023)</a> however Japan’s Aerospace Exploration Agency
 (JAXA) launched IKAROS on 20 May 2010. <a href="#(Jaxa, no date - a)">(Jaxa, no date - a)</a> It was successful in proving the viability of navigationusing a
 combination of solar sails and solar power. The sail of the IKAROS is approximately 20 meters in diagonal length and is as thin as
@@ -114,7 +117,8 @@ combination of solar sails and solar power. The sail of the IKAROS is approximat
 spinning of IKAROS to dynamically deploy the sail. <a href="#(Jaxa, no date - b)">(Jaxa, no date - b)</a> see figure 4. The dynamic movement was inspired by Origami
 folds and by continuing to have IKAROS rotate in space that would provide a constant force so the sail wouldn’t collapse or require a
 support boom.
-
+            <img src="deployment JAXA.jpg" alt="How a ship rotates to automaticaly depoy its sails" width="900" height"300">
+		Figure 4. shows the stages of deployment
 </pre>
     <h3 id="Conclusion">Conclusion</h3>  
     <pre>
