--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@ Fulton, J. (2023) Dynamics Analysis of Origami-Folded Deployable Space Structure
         </tr>
     </table>
     <hr>
+<script>
 var slideImages = ["slide1.jpg", "slide2.jpg", "slide3.jpg", "slide4.jpg", "slide5.jpg"]; 
 var currentSlide = 0;
 
