--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Fulton, J. (2023) Dynamics Analysis of Origami-Folded Deployable Space Structure
     </table>
     <hr>
 <script>
-var slideImages = ["slide1.jpg", "slide2.jpg", "slide3.jpg", "slide4.jpg", "slide5.jpg"]; 
+var slideImages = ["Slide1.jpg", "Slide2.jpg", "Slide3.jpg", "Slide4.jpg", "Slide5.jpg"]; 
 var currentSlide = 0;
 
 function showSlide() {
@@ -263,14 +263,14 @@ function showSlideNumber(slideNumber) {
 
 showSlide () ;
 </script>
-<div id="slide -container">
-<img id="slide" src="slidel.jpg" alt="slide 1" style="width:100%; max-width:800px">
+<div id="slide-container">
+<img id="slide" src="Slidel.jpg" alt="slide 1" style="width:100%; max-width:800px">
 
 <div class="button-container">
 	<button class="button" onclick="prevSlide()">Previous </button> 
 	<button class="button" onclick= "nextSlide ()">Next </button> 
 </div>
-<div class="slide-number- container">
+<div class="slide-number-container">
 	<button class="button" onclick= "showSlideNumber(1)">1</button>
 	<button class="button" onclick= "showSlideNumber(2)">2</button>
 	<button class="button" onclick= "showSlideNumber(3)">3</button>
@@ -283,7 +283,6 @@ showSlide () ;
 	position: relative;
 	}
 .button-container {
-position: absolute;
 bottom: 0;
 left: 50%;
 transform: translateX (-50%);
@@ -302,7 +301,7 @@ margin: 0 Spx;
 }
 	
 .slide-number-container {
-position: absolute;
+
 bottom: 0;
 left: 5O%;
 transform: translateX (-50%);
